--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "async-cache": "^1.1.0",
     "consola": "^2.12.1",
-    "feed": "^4.2.0"
+    "feed": "MeatEaterInc/feed#529dcf9e3eb31e87f5e46e680e981fc003badd42"
   },
   "devDependencies": {
     "@commitlint/cli": "latest",
